changes made locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,13 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-<<<<<<< HEAD
-            This is my first web app!!!!!!yayyyayayay
-=======
-            Hi! I am Prateek and this is my first webapp.
->>>>>>> f9beb476378ce32a510c3693d51a2aa0e9558c45
-        </div>
-        <div></div>>
+            <h1>This is my first web app!!!!!!yayyyayayay</h1>
+            <h2>Hi! I am Prateek and this is my first webapp.</h2>
+		</div>
         <h1>It's working</h1>
         <p>I've made some changes</p></div>
         <script type="text/javascript" src="/ui/main.js">
