[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             <h2>Hi! I am Prateek and this is my first webapp.</h2>
 		</div>
         <h1>It's working</h1>
-        <p>I've made some changes</p></div>
+        <p>I've made some changes</p>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
